# microcms-content-ops-analytics-platform

./: .dockerignore  .env.example  .envrc  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  docker-compose.local.yml  docker-compose.yml  flake.nix  justfile  ngrok.local.yml
.codex/: config.toml
.codex/agents/: code-reviewer.toml  docs-staleness-reviewer.toml  tdd-implementer.toml
.codex/environments/: environment.toml
.github/workflows/: ci.yml  docker-build.yml  (+3 more)
docs/: README.md  aws-deploy.md  local-debug.md  microcms-webhook.md
duckdb-query-api/: Cargo.toml  Dockerfile
duckdb-query-api/src/: config.rs  duckdb.rs  error.rs  handler.rs  lib.rs  main.rs  query.rs  routes.rs  state.rs  storage.rs
duckdb-query-api/src/handler/: mcp.rs  routes.rs  state.rs  validation.rs
duckdb-query-api/src/metrics/: average_time_to_publish.rs
duckdb-query-api/src/query/: api_activity.rs  average_draft_to_publish.rs  average_time_to_publish.rs  calendar_heatmap.rs  event_kind.rs  publish_actions.rs  top_updated_contents.rs
duckdb-query-api/src/storage/: connection.rs  engine.rs
requirements/: README.md  microcms-content-ops-analytics.spec.md
scripts/: debug-webhook.sh  deploy-grafana-cloud.sh  test-deploy-grafana-cloud.sh  validate-ci-workflow.rb  validate-grafana-dashboard.sh
webhook-ingest/: Cargo.toml  Dockerfile
webhook-ingest/src/: config.rs  debug_seed.rs  error.rs  handler.rs  ingest.rs  lib.rs  main.rs  normalize.rs  s3.rs  signature.rs  storage.rs
webhook-ingest/src/debug_seed/: bulk.rs  config.rs  fixture.rs  io.rs  rng.rs  smoke.rs  tests.rs  time.rs  ulid.rs
webhook-ingest/src/debug_seed/bulk/: activity.rs  schedule.rs  template.rs  timing.rs
webhook-ingest/src/handler/: response.rs
webhook-ingest/src/ingest/: normalize.rs  parquet.rs
webhook-ingest/src/ingest/normalize/: event_kind.rs  extract.rs
webhook-ingest/src/storage/: s3_client.rs  s3_key.rs
(+26 files in other folders)
