[package]
name = "webhook-ingest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arrow-array = "57"
arrow-schema = "57"
aws-config = "1"
aws-sdk-s3 = "1"
base64 = "0.22"
bytes = "1"
chrono.workspace = true
hex = "0.4"
hmac = "0.12"
lambda_http = "0.17"
lambda_runtime = "0.14"
parquet = { version = "57", features = ["arrow"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tokio.workspace = true
uuid = { version = "1", features = ["v7"] }

[[bin]]
name = "debug-parquet-seed"
path = "src/bin/debug-parquet-seed.rs"

[dev-dependencies]
tempfile = "3"
